# hashish

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs
webext/: hashish-bg.js  hashish-popup.html  hashish-popup.js  manifest.json
