[package]
name = "hasher"
version = "0.1.0"
authors = ["Eugene Gorodinsky <1811946+eugene2k@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rust-argon2 = "0.4"
wasm-bindgen = "0.2"
wee_alloc = "0.4"
convert-base = "1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"